Support native-image environment variable capturing in bundles